css link correction

--- a/index.html
+++ b/index.html
@@ -37,11 +37,25 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Pricing</a>
                             </li>
-                            
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Pricing</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
             </nav>
+        </div>
+    </section>
+
+    <section class="header-section">
+        <div class="container">
+            <div class="row">
+                <div class="col header-div" style="width: 25%">
+                    <h1 class="m-auto">Handcrafted, home-made masterpieces</h1>
+                    <input type="email" placeholder="Enter Your Email"><br>
+                    <button class="btn btn-warning btn-md">Get Start</button>
+                </div>
+            </div>
         </div>
     </section>
 
